syntax = "proto3";

package proto;
option go_package = "github.com/example/path/gen;proto";

message Request0 {
}

message Request1 {
  string a = 1;
}

message Request2 {
  string a = 1;
  string b = 2;
}

message Response { 
  string result = 1; 
}

service AddService {
  rpc GetKey(Request1) returns (Response);
  rpc SetKey(Request2) returns (Response);
  rpc Clear(Request0) returns (Response);
}
